--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <header>
-      <h1>Plan de Jardinería – Salón del Reino</h1>
+      <h1>Plan de Jardinería – Cong.Miraflores</h1>
     </header>
 
     <!-- Formulario -->
