--- a/login.html
+++ b/login.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Iniciar Sesión - Admin</title>
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="login.css" />
+
+  <!-- Íconos Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body class="login-body">
+<body>
 
   <div class="login-container">
-    <h2>Jardinería Cong. Miraflores</h2>
+    <h2><i class="fas fa-leaf"></i> Jardinería Cong. Miraflores</h2>
+
     <form id="loginForm">
       <label for="usuario">Usuario:</label>
       <input type="text" id="usuario" name="usuario" required />
@@ -20,7 +26,8 @@
 
       <button type="submit">Ingresar</button>
     </form>
-    <p id="mensajeError"></p>
+
+    <p id="mensajeError" class="error-message"></p>
   </div>
 
   <script src="login.js"></script>
