--- a/semana4.html
+++ b/semana4.html
@@ -25,10 +25,15 @@
     <div id="loader" class="loader">Cargando historial...</div>
 
     <!-- Formulario -->
-    <section id="formulario">
-      <label>Responsable:
-        <input type="text" id="responsable" required placeholder="Nombre del responsable" />
-      </label>
+   <section id="formulario">
+  <label>Responsable:</label>
+  <select id="responsable" required>
+    <option value="">Selecciona tu nombre</option>
+    <option value="Misael Ramires">Misael Ramires</option>
+    <option value="Andy Guzman">Andy Guzman</option>
+    <option value="Jose M. Aracena">Jose M. Aracena</option>
+  </select>
+
 
       <!-- Semana 4 -->
       <div class="semana-box">
