--- a/reporte.html
+++ b/reporte.html
@@ -3,33 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reporte Mensual</title>
+  <title>Reporte Mensual de Jardinería</title>
+
+  <!-- Estilos globales y del reporte -->
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="reporte.css" /> <!-- Estilos específicos del reporte -->
+  <link rel="stylesheet" href="reporte.css" />
+
+  <!-- Íconos Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
   <div class="container">
-    <h1>Reporte Mensual</h1>
+    <h1><i class="fas fa-leaf"></i> Reporte Mensual de Jardinería</h1>
 
-    <!-- Acciones -->
+    <!-- Botones de acción -->
     <div class="acciones">
-      <button id="descargarTxtBtn"><i class="fas fa-download"></i> Descargar como .txt</button>
-      <button id="imprimirBtn"><i class="fas fa-print"></i> Imprimir / Guardar como PDF</button>
-      <button id="compartirBtn" disabled><i class="fas fa-share-alt"></i> Compartir (solo móvil)</button>
+      <button id="descargarTxtBtn"><i class="fas fa-download"></i> Descargar .txt</button>
+      <button id="imprimirBtn"><i class="fas fa-print"></i> Imprimir / PDF</button>
+      <button id="compartirBtn" disabled><i class="fas fa-share-alt"></i> Compartir</button>
     </div>
 
-    <!-- Área del reporte -->
+    <!-- Área donde se carga el contenido -->
     <div id="reporteArea" class="reporte-area">
       <p>Cargando reporte...</p>
     </div>
   </div>
 
-  <!-- Font Awesome -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js "></script>
-
-  <!-- Lógica de reporte -->
-  <script type="module" src="./reporte.js"></script>
-
+  <!-- JS que maneja la lógica del reporte -->
+  <script type="module" src="reporte.js"></script>
 </body>
 </html>
