--- a/app.html
+++ b/app.html
@@ -16,6 +16,7 @@
       <a href="semana2.html" class="btn-semana"><i class="fas fa-seedling"></i> Semana 2</a>
       <a href="semana3.html" class="btn-semana"><i class="fas fa-water"></i> Semana 3</a>
       <a href="semana4.html" class="btn-semana"><i class="fas fa-spa"></i> Semana 4</a>
+      <a href="historial.html" class="btn-semana"><i class="fas fa-history"></i> Historial</a>
     </div>
   </div>
 
