--- a/semana3.html
+++ b/semana3.html
@@ -61,24 +61,7 @@
 
     </section>
 
-    <!-- Historial y Reporte -->
-    <section id="historial">
-      <h2>Historial Mensual</h2>
-      <select id="mesSelector"></select>
-
-      <!-- Contenedor de resumen -->
-      <div id="resumen" class="registro-mensual-container"></div>
-
-      <!-- Acciones -->
-      <div class="acciones">
-        <button id="generarReporteBtn"><i class="fas fa-file-alt"></i> Generar Reporte</button>
-        <button id="verPlantillaBtn"><i class="fas fa-file-alt"></i> Ver en plantilla</button>
-      </div>
-
-      <!-- Área donde se muestra el reporte generado -->
-      <div id="reporteArea" class="reporte-area"></div>
-    </section>
-  </div>
+   <div id="notificacion" class="notificacion" aria-live="polite"></div>
 
   <!-- Scripts -->
   <script type="module" src="firebase.js"></script>
