--- a/semana4.html
+++ b/semana4.html
@@ -10,67 +10,43 @@
 </head>
 <body>
 
-  <!-- Notificación tipo Snackbar -->
-  <div id="notificacion" class="notificacion"></div>
-
   <div class="container">
     <header>
       <h1><i class="fas fa-seedling"></i> Plan de Jardinería – Cong. Miraflores</h1>
+      <button id="toggleDarkMode" class="modo-oscuro-btn" aria-label="Cambiar modo oscuro">🌙 Modo Oscuro</button>
     </header>
-
-    <!-- Botón modo oscuro -->
-    <button id="toggleDarkMode">🌙 Modo Oscuro</button>
 
     <!-- Loader historial -->
     <div id="loader" class="loader">Cargando historial...</div>
 
-    <!-- Formulario -->
-   <section id="formulario">
-  <label>Responsable:</label>
-  <select id="responsable" required>
-    <option value="">Selecciona tu nombre</option>
-    <option value="Misael Ramires">Misael Ramires</option>
-    <option value="Andy Guzman">Andy Guzman</option>
-    <option value="Jose M. Aracena">Jose M. Aracena</option>
-  </select>
+    <!-- Formulario Semana 4 -->
+    <section id="formulario">
+      <label for="responsable">Responsable:</label>
+      <select id="responsable" required>
+        <option value="">Selecciona tu nombre</option>
+        <option value="Misael Ramires">Misael Ramires</option>
+        <option value="Andy Guzman">Andy Guzman</option>
+        <option value="Jose M. Aracena">Jose M. Aracena</option>
+      </select>
 
-
-      <!-- Semana 4 -->
-      <div class="semana-box">
-        <h2>Semana 4 – Embellecimiento y Detalles</h2>
+      <div class="semana-box" id="semana4">
+        <h2><i class="fas fa-star"></i> Semana 4 – Embellecimiento y Detalles</h2>
         <ul>
           <li><label><input type="checkbox" class="semana4"> Plantación de flores de temporada</label></li>
           <li><label><input type="checkbox" class="semana4"> Reposición de plantas dañadas o secas</label></li>
           <li><label><input type="checkbox" class="semana4"> Limpieza a fondo de maceteros y jardineras</label></li>
           <li><label><input type="checkbox" class="semana4"> Acomodo estético de piedras o decoraciones</label></li>
         </ul>
-        <label>Fecha de realización (Semana 4):
-          <input type="date" id="fechaSemana4" />
-        </label>
-        <label>Comentarios Semana 4:
-          <textarea id="comentarioSemana4" placeholder="Observaciones..."></textarea>
-        </label>
+
+        <label for="fechaSemana4">Fecha de realización (Semana 4):</label>
+        <input type="date" id="fechaSemana4" />
+
+        <label for="comentarioSemana4">Comentarios Semana 4:</label>
+        <textarea id="comentarioSemana4" placeholder="Observaciones..."></textarea>
       </div>
-    </section>
-
-    <!-- Historial y Reporte -->
-    <section id="historial">
-      <h2>Historial Mensual</h2>
-      <select id="mesSelector"></select>
-
-      <!-- Contenedor de resumen -->
-      <div id="resumen" class="registro-mensual-container"></div>
-
-      <!-- Acciones -->
-      <div class="acciones">
-        <button id="generarReporteBtn"><i class="fas fa-file-alt"></i> Generar Reporte</button>
-        <button id="verPlantillaBtn"><i class="fas fa-file-alt"></i> Ver en plantilla</button>
-      </div>
-
-      <!-- Área donde se muestra el reporte generado -->
-      <div id="reporteArea" class="reporte-area"></div>
     </section>
   </div>
+<div id="notificacion" class="notificacion" aria-live="polite"></div>
 
   <!-- Scripts -->
   <script type="module" src="firebase.js"></script>
