--- a/app.html
+++ b/app.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>🌿 Semanas – Plan de Jardinería</title>
   <link rel="stylesheet" href="botones.css">
+  <link rel="icon" type="image/x-icon" href="jr.ico">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
