--- a/historial.html
+++ b/historial.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="responsive.css" />
   <link rel="stylesheet" href="botones.css" />
+    <link rel="icon" type="image/x-icon" href="jr.ico">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
