--- a/reporte.html
+++ b/reporte.html
@@ -8,6 +8,8 @@
   <!-- Estilos globales y del reporte -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="reporte.css" />
+    <link rel="icon" type="image/x-icon" href="jr.ico">
+
 
   <!-- Íconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
