--- a/semana1.html
+++ b/semana1.html
@@ -6,6 +6,8 @@
   <title>Jardinería – Salón del Reino</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="responsive.css" />
+    <link rel="icon" type="image/x-icon" href="jr.ico">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
