--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Iniciar Sesión - Admin</title>
+  <title>🌿 Iniciar Sesión - Admin</title>
 
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css" />
