--- a/app.html
+++ b/app.html
@@ -21,6 +21,8 @@
       <a href="historial.html" class="btn-semana"><i class="fas fa-history"></i> Historial</a>
     </div>
   </div>
+<script src="modo-oscuro.js"></script>
 
 </body>
+
 </html>
