--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="login.css" />
-    <link rel="icon" type="image/x-icon" href="jr.ico">
-
+  <link rel="icon" type="image/x-icon" href="jr.ico">
 
   <!-- Íconos Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+  <!-- Botón de modo oscuro -->
 
   <div class="login-container">
     <h2><i class="fas fa-leaf"></i> Jardinería Cong. Miraflores</h2>
@@ -27,11 +28,15 @@
       <input type="password" id="contrasena" name="contrasena" required />
 
       <button type="submit">Ingresar</button>
+      <button id="toggleDarkMode" class="btn-tema"><i class="fas fa-moon"></i></button>
+
     </form>
 
     <p id="mensajeError" class="error-message"></p>
   </div>
 
+  <!-- Scripts -->
+  <script src="modo-oscuro.js"></script>
   <script src="login.js"></script>
 </body>
 </html>
