--- a/reporte.html
+++ b/reporte.html
@@ -34,5 +34,7 @@
 
   <!-- JS que maneja la lógica del reporte -->
   <script type="module" src="reporte.js"></script>
+  <script src="modo-oscuro.js"></script>
+
 </body>
 </html>
