--- a/semana2.html
+++ b/semana2.html
@@ -26,9 +26,11 @@
       <label for="responsable">Responsable:</label>
       <select id="responsable" required>
         <option value="">Selecciona tu nombre</option>
-        <option value="Misael Ramires">Misael Ramires</option>
+        <option value="Misael Ramires">Misael Ramirez</option>
         <option value="Andy Guzman">Andy Guzman</option>
         <option value="Jose M. Aracena">Jose M. Aracena</option>
+        <option value="Jose Castro">Jose Castro</option>
+        <option value="Javier Alfonseca">Javier Alfonseca</option>
       </select>
 
       <div class="semana-box" id="semana2">
@@ -54,6 +56,8 @@
   <script type="module" src="firebase.js"></script>
   <script type="module" src="auth.js"></script>
   <script type="module" src="app.js"></script>
-
+<script src="modo-oscuro.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>emailjs.init("0u6gw7DoZrcoEnTx3"); </script>
 </body>
 </html>
