--- a/historial.html
+++ b/historial.html
@@ -53,6 +53,7 @@
   <script type="module" src="firebase.js"></script>
   <script type="module" src="auth.js"></script>
   <script type="module" src="reporteHistorial.js"></script>
+<script src="modo-oscuro.js"></script>
 
 </body>
 </html>
