--- a/semana3.html
+++ b/semana3.html
@@ -27,14 +27,16 @@
     <div id="loader" class="loader">Cargando historial...</div>
 
     <!-- Formulario -->
-    <section id="formulario">
-  <label>Responsable:</label>
-  <select id="responsable" required>
-    <option value="">Selecciona tu nombre</option>
-    <option value="Misael Ramires">Misael Ramires</option>
-    <option value="Andy Guzman">Andy Guzman</option>
-    <option value="Jose M. Aracena">Jose M. Aracena</option>
-  </select>
+  <section id="formulario">
+      <label for="responsable">Responsable:</label>
+      <select id="responsable" required>
+        <option value="">Selecciona tu nombre</option>
+        <option value="Misael Ramires">Misael Ramirez</option>
+        <option value="Andy Guzman">Andy Guzman</option>
+        <option value="Jose M. Aracena">Jose M. Aracena</option>
+        <option value="Jose Castro">Jose Castro</option>
+        <option value="Javier Alfonseca">Javier Alfonseca</option>
+      </select>
 
 
       <!-- Semana 3 -->
@@ -69,6 +71,8 @@
   <script type="module" src="firebase.js"></script>
   <script type="module" src="auth.js"></script>
   <script type="module" src="app.js"></script>
-
+<script src="modo-oscuro.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>emailjs.init("0u6gw7DoZrcoEnTx3"); </script>
 </body>
 </html>
